# pythonFastApi

./: README.md  createStudent.py  environment.yml  main.py  main01.py  main02.py  main06.py  model19.py  pyproject.toml  response.py  uploadfile.py
file/md文档/: FastAPI进阶2.md
migrations/models/: 0_20251209150827_init.py  1_20251208175230_None.py  1_20251209151529_添加学生表.py
template/: index.html
